removed list styles on header and made the elements inline

--- a/main.css
+++ b/main.css
@@ -1,2 +1,11 @@
 
 /*<----------------- Pseudo Class ------------------>*/
+
+#main-nav {
+  display: flex;
+}
+
+.top > li {
+  list-style: none;
+  display: inline;
+}
