shifted the inline span elements to block and applied border and margin

--- a/main.css
+++ b/main.css
@@ -5,7 +5,13 @@
   display: flex;
 }
 
-.top > li {
+.block {
   list-style: none;
   display: inline;
+}
+
+.inline {
+  display: block;
+  border: 1px solid black;
+  margin: 25px;
 }
