added nth-of-type pseudo selector

--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@
   margin: 25px;
 }
 
-.n-child > section{
+article.n-child > section:nth-of-type(even) {
   border: 1px solid black;
   margin: 1px;
 }
